# labelr

./: .gitignore  Cargo.toml  build.rs  package-lock.json  package.json
docs/: obb-drawing-techniques.md
front/: index.html
front/src/: api.ts  bindings.ts  main.ts  obb.ts
src/: dataset.rs  main.rs  model.rs
src/api/: images.rs  mod.rs  yolo_obb.rs
